# asp_therm

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists_common.txt  CMakeLists_win.txt  README.md  asp_therm.kdev4  atherm_setup.cmake  configuration_template.json  configuration_template.xml  main.cpp
cmake/: atherm_setup.cmake  env_setup.cmake  models_src.cmake  project_setup.cmake
data/: .gitignore  gasmix_inp_example.xml
data/calculation/: calculation_setup.xml  calculation_setup_iso.xml
data/calculation/gost_test/: gostmix1.xml  gostmix2.xml  gostmix3.xml  iso4.xml
data/gases/: argon.xml  carbon_dioxide.xml  ethane.xml  gasmix_inp_example.xml  helium.xml  heptane.xml  hexane.xml  hydrogen.xml  hydrogen_sulfide.xml  i_butane.xml  iso_butane.xml  iso_pentane.xml  methane.json  methane.xml  n_butane.xml  n_pentane.xml  nitrogen.xml  octane.xml  oxygen.xml  propane.xml
examples/default/: main.cpp
include/target_sys/_nix/: target_sys.h
include/target_sys/win/: target_sys.h
soft/: gas2json.py  gcov_report.py
source/: .gitignore
source/core/common/: atherm_common.cpp  atherm_common.h  common.cpp  common.h  merror_codes.cpp  merror_codes.h  models_common.cpp  models_common.h  models_errors.cpp  models_errors.h  models_logging.cpp  models_logging.h  models_math.cpp  models_math.h  program_state.cpp  program_state.h
source/core/gas_parameters/: examples.cpp  examples.h  gas_defines.h  gas_description.cpp  gas_description.h  gas_description_dynamic.cpp  gas_description_dynamic.h  gas_description_mix.cpp  gas_description_mix.h  gas_description_static.cpp  gas_description_static.h  gas_mix_init.cpp  gas_mix_init.h  gas_ng_gost.cpp  gas_ng_gost.h  gas_ng_gost30319.cpp  gas_ng_gost30319.h  gas_ng_gost56851.cpp  gas_ng_gost56851.h  gas_ng_gost_defines.cpp  gas_ng_gost_defines.h  gas_ng_gost_init.cpp  gas_ng_gost_init.h  gasmix_init.cpp  gasmix_init.h
source/core/models/: calculation_info.cpp  calculation_info.h  model_general.cpp  model_general.h  model_ideal_gas.cpp  model_ideal_gas.h  model_ng_gost.cpp  model_ng_gost.h  model_peng_robinson.cpp  model_peng_robinson.h  model_redlich_kwong.cpp  model_redlich_kwong.h  model_redlich_kwong_soave.cpp  model_redlich_kwong_soave.h  models_configurations.cpp  models_configurations.h  models_creator.cpp  models_creator.h
source/core/phase_diagram/: phase_diagram.cpp  phase_diagram.h  phase_diagram_models.cpp  phase_diagram_models.h
source/core/service/: calculation_info.cpp  calculation_info.h  calculation_setup.cpp  calculation_setup.h  program_state.cpp  program_state.h
source/core/subroutins/: calculation_by_file.h  configuration_by_file.cpp  configuration_by_file.h  configuration_strtpl.h  db_connection.cpp  db_connection.h  db_connection_manager.cpp  db_connection_manager.h  db_connection_postgre.cpp  db_connection_postgre.h  db_defines.cpp  db_defines.h  db_query.cpp  db_query.h  file_structs.cpp  file_structs.h  filereader.cpp  filereader.h  gas_by_file.cpp  gas_by_file.h  gasmix_by_file.cpp  gasmix_by_file.h  models_output.h  xml_reader.cpp  xml_reader.h  xmlreader.cpp  xmlreader.h
source/database/: atherm_db_tables.cpp  atherm_db_tables.h  db_connection.cpp  db_connection.h  db_connection_manager.cpp  db_connection_manager.h  db_connection_postgre.cpp  db_connection_postgre.h  db_defines.cpp  db_defines.h  db_queries_setup.cpp  db_queries_setup.h  db_query.cpp  db_query.h  db_tables.cpp  db_tables.h
source/dynamic_modeling/: finite_volume.cpp  finite_volume.h
source/gui/: .gitignore  gui.pro  gui_elements.cpp  gui_elements.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  program_data.cpp  program_data.h
source/plot/: plot_defines.h  plot_main.cpp  plot_main.h
source/reader/: INode.h  Reader.h  XMLReader.h
source/utils/: Common.cpp  Common.h  ErrorWrap.cpp  ErrorWrap.h  FileURL.cpp  FileURL.h  INode.h  JSONReader.h  Logging.cpp  Logging.h  ThreadWrap.h  XMLReader.h
tests/: .gitignore
tests/full/: CMakeLists.txt  gtest_setup.cmake
tests/full/core/: test_gasmix.cpp
tests/full/core/common/: common_tests.cmake  test_common.cpp  test_math.cpp  test_utils.cpp
tests/full/core/gas_parameters/: gas_parameters_tests.cmake  test_gas_description.cpp  test_gasmix.cpp
tests/full/core/models/: models_tests.cmake  test_models_base.cpp
tests/full/core/service/: state_tests.cmake  test_calculation_setup.cpp  test_state.cpp
tests/full/database/: database_tests.cmake  test_queries.cpp  test_tables.cpp
tests/full/utils/: fileurl_tests.cmake  inode_imp.cpp  inode_imp.h  readers_tests.cmake  test_fileurl.cpp  test_json.cpp  test_xml.cpp  test_xml.xml
tests/full/utils/data/: .gitignore  test_configuration.xml  test_json.json
tests/models/: .gitignore  CMakeLists.txt  test_models.cpp  test_models_mix.cpp  test_models_mix.h
tests/plot/: CMakeLists.txt  test_plot.cpp
tests/subroutins/: CMakeLists.txt  subroutins_test_main.cpp  test_xml.cpp  test_xml.h
